--- a/.env
+++ b/.env
@@ -5,13 +5,13 @@
 KIOSK_USERNAME="kiosk"
 KIOSK_PASSWORD="kiosk123"  # Consider changing this
 KIOSK_FULLNAME="Kiosk User"
-ADMIN_USERNAME="localadmin"  # Admin username
+ADMIN_USERNAME="alocalbox"  # Admin username
 
 # Display timeout configuration (in seconds)
 DISPLAY_TIMEOUT=3600  # 1 hour
 
 # WiFi configuration
-WIFI_SSID="YourSSID"
+WIFI_SSID="LAT-Staff"
 WIFI_PASSWORD='WiFi Password'
 
 # Browser configuration
