--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,115 @@
-# .env.example
-# Configuration variables for ZorinOS Kiosk Setup
+# .env.example - Configuration variables for ZorinOS Kiosk Setup
+#
+# This file contains all the environment variables used by the kiosk setup scripts.
+# Copy this file to .env and modify the values to match your requirements.
+# Example: cp .env.example .env
 
-# User configuration
+#==============================================================================
+# USER CONFIGURATION
+#==============================================================================
+
+# KIOSK_USERNAME: The username for the kiosk user account
+# This is the account that will automatically log in when the system boots
+# Example: kiosk
 KIOSK_USERNAME="kiosk"
-KIOSK_PASSWORD="kiosk123"  # Consider changing this
+
+# KIOSK_PASSWORD: The password for the kiosk user account
+# This is needed for initial setup but won't be used for login as auto-login is configured
+# IMPORTANT: Change this from the default for security reasons
+# Example: kiosk123
+KIOSK_PASSWORD="kiosk123"  # Consider changing this to a more secure password
+
+# KIOSK_FULLNAME: The full name or display name for the kiosk user account
+# This appears in the user interface where the user's name is displayed
+# Example: Kiosk User
 KIOSK_FULLNAME="Kiosk User"
-ADMIN_USERNAME="localadmin"  # Admin username
 
-# Display timeout configuration (in seconds)
-DISPLAY_TIMEOUT=3600  # 1 hour
+# ADMIN_USERNAME: The username of the administrative account
+# This account will be used to make persistent changes to the kiosk environment
+# This should be an existing user with sudo privileges
+# Example: localadmin
+ADMIN_USERNAME="localadmin"
 
-# WiFi configuration
+#==============================================================================
+# DISPLAY CONFIGURATION
+#==============================================================================
+
+# DISPLAY_TIMEOUT: The time in seconds before the display would normally time out
+# The kiosk setup disables this timeout, but this value is used as a reference
+# Example: 3600 (1 hour)
+DISPLAY_TIMEOUT=3600
+
+#==============================================================================
+# NETWORK CONFIGURATION
+#==============================================================================
+
+# WIFI_SSID: The name (SSID) of the WiFi network to connect to
+# This is used if you want the kiosk to automatically connect to a specific wireless network
+# Example: CompanyWiFi
 WIFI_SSID="YourSSID"
+
+# WIFI_PASSWORD: The password for the WiFi network
+# Make sure to enclose this in single quotes if it contains special characters
+# Example: 'P@ssw0rd!'
 WIFI_PASSWORD='WiFi Password'
 
-# Browser configuration
+#==============================================================================
+# BROWSER CONFIGURATION
+#==============================================================================
+
+# HOMEPAGE: The URL that will be set as the homepage in Firefox
+# This is the page that will load when Firefox starts or when the home button is clicked
+# Example: https://intranet.company.com
 HOMEPAGE="https://yourhomepage.com"
 
-# Wallpaper configuration
+#==============================================================================
+# APPEARANCE CONFIGURATION
+#==============================================================================
+
+# WALLPAPER_NAME: The filename of the wallpaper image to be used for the kiosk desktop
+# Example: Company_Wallpaper.jpg
 WALLPAPER_NAME="Wallpaper.jpg"
+
+# WALLPAPER_ADMIN_PATH: The full path to the wallpaper file in the admin user's home directory
+# This is used as a source for copying the wallpaper
+# The $ADMIN_USERNAME variable is used here to reference the admin username defined above
+# Example: /home/localadmin/Company_Wallpaper.jpg
 WALLPAPER_ADMIN_PATH="/home/$ADMIN_USERNAME/$WALLPAPER_NAME"
+
+# WALLPAPER_SYSTEM_PATH: The full path where the wallpaper will be copied in the system-wide backgrounds directory
+# Example: /usr/share/backgrounds/Company_Wallpaper.jpg
 WALLPAPER_SYSTEM_PATH="/usr/share/backgrounds/$WALLPAPER_NAME"
 
-# Script directories
+#==============================================================================
+# DIRECTORY CONFIGURATION
+#==============================================================================
+
+# OPT_KIOSK_DIR: The directory where kiosk-related scripts and files will be stored
+# This is a system directory that persists across reboots
+# Example: /opt/kiosk
 OPT_KIOSK_DIR="/opt/kiosk"
+
+# TEMPLATE_DIR: The directory where template files for the kiosk user's home directory are stored
+# These files are copied to the kiosk user's home directory on each boot
+# Example: /opt/kiosk/templates
 TEMPLATE_DIR="$OPT_KIOSK_DIR/templates"
 
-# Scheduled reboot configuration
-# Set REBOOT_TIME to 24-hour format (HH:MM) or -1 to disable scheduled reboots
-REBOOT_TIME="03:00"  # 3:00 AM by default
-# REBOOT_DAYS: comma-separated list of days (0-6, where 0=Sunday) or "all" for daily reboots
-# Examples: "1,3,5" for Monday, Wednesday, Friday; "all" for every day
+#==============================================================================
+# SCHEDULED REBOOT CONFIGURATION
+#==============================================================================
+
+# REBOOT_TIME: The time of day when the system should automatically reboot
+# Format: 24-hour format (HH:MM)
+# Set to -1 to disable scheduled reboots
+# Example: 03:00 (3:00 AM)
+REBOOT_TIME="03:00"
+
+# REBOOT_DAYS: The days of the week when the system should reboot
+# Options:
+#   - "all" for daily reboots
+#   - A comma-separated list of days (0-6, where 0=Sunday)
+# Examples:
+#   - "1,3,5" for Monday, Wednesday, Friday
+#   - "all" for every day
+#   - "0,6" for weekends only (Sunday and Saturday)
 REBOOT_DAYS="all"
